# DiligentEngine

./: .gitignore  .gitmodules  CMakeLists.txt  build-get-latest.bat  build-get-latest.sh
playground/pgApp/: CMakeLists.txt  launch.bat
playground/pgApp/assets/gdr/: CommonInclude.sh  bgfx_shader.sh  cs_gdr_copy_z.sh  cs_gdr_downscale_hi_z.sh  cs_gdr_occlude_props.sh  cs_gdr_stream_compaction.sh  fs_gdr_instanced_indirect_rendering.psh  fs_gdr_instanced_indirect_rendering.sh  gdr_common.sh  vs_gdr_instanced_indirect_rendering.sh  vs_gdr_instanced_indirect_rendering.vsh  vs_gdr_render_occlusion.sh
playground/pgApp/assets/hlsl/: CommonInclude.hlsl
playground/pgApp/assets/resources/models/test/: test_scene.assbin
playground/pgApp/assets/resources/shaders/: CommonInclude.hlsl  ForwardPlusRendering.hlsl
playground/pgApp/resources/models/test/: test_scene.assbin
playground/pgApp/src/: app.cpp  app.h  apptest.cpp  apptest.h  engine.cpp  engine.h  mat2quat.h  pgApp.cpp  pgApp.h  pipelinecolorvertex.h  scenetest.cpp  scenetest.h  techniquetest.cpp  techniquetest.h  test.cpp  testscene.cpp  testscene.h  testtechnique.cpp  testtechnique.h
playground/pgApp/src/engine/: ConstantBuffer.cpp  Shader.cpp  ShaderParameter.cpp  StructuredBuffer.cpp  app.cpp  app.h  camera.cpp  cube.h  cubepass.cpp  cubepass.h  cubetex.cpp  cubetex.h  cubetexpass.cpp  cubetexpass.h  engine.cpp  engine.h  envmappass.cpp  envmappass.h  gltfmodelpass.cpp  gltfmodelpass.h  material.cpp  mathutils.h  modelpass.cpp  modelpass.h  opaquepass.cpp  opaquepass.h  pass.cpp  pass.h  pipeline.cpp  scene.cpp  technique.cpp
playground/pgApp/src/engine/common/: camera.cpp  camera.h  cameraalt.h  engine.cpp  shader.cpp
playground/pgApp/src/engine/mesh/: mesh.cpp  meshcube.cpp  meshcube.h  meshcubetex.cpp  meshcubetex.h
playground/pgApp/src/engine/nvapi/: nvapi.cpp  nvapi.h
playground/pgApp/src/engine/pass/: pass.cpp  passclearrt.cpp  passclearrt.h  passcopybuffer.cpp  passcopybuffer.h  passcopytexture.cpp  passcopytexture.h  passdispatch.cpp  passdispatch.h  passgeometry.cpp  passgeometry.h  passgltfmodel.cpp  passgltfmodel.h  passinvokefunction.cpp  passinvokefunction.h  passlight.cpp  passlight.h  passopaque.cpp  passopaque.h  passpipeline.cpp  passpostprocess.cpp  passpostprocess.h  passrender.cpp  passrender.h  passsetrt.cpp  passsetrt.h  passtest.cpp  passtest.h  passtransparent.cpp  passtransparent.h
playground/pgApp/src/engine/pipeline/: pipeline.cpp  pipelinebase.cpp  pipelinebase.h  pipelinecolorvertex.cpp  pipelinecolorvertex.h  pipelinedebug.cpp  pipelinedebug.h  pipelinedeferredgeometry.cpp  pipelinedeferredgeometry.h  pipelinedispatch.cpp  pipelinedispatch.h  pipelinefpopaque.cpp  pipelinefpopaque.h  pipelinefptransparent.cpp  pipelinefptransparent.h  pipelinelightback.cpp  pipelinelightback.h  pipelinelightdir.cpp  pipelinelightdir.cpp.bak  pipelinelightdir.h  pipelinelightfront.cpp  pipelinelightfront.h  pipelinetexvertex.cpp  pipelinetexvertex.h  pipelinetransparent.cpp  pipelinetransparent.h
playground/pgApp/src/engine/render/: basepass.cpp  basepass.h  copytextpass.cpp  copytextpass.h  cube.cpp  cube.h  cubepass.cpp  cubepass.h  cubetex.cpp  cubetex.h  cubetexpass.cpp  cubetexpass.h  deferredtechnique.cpp  deferredtechnique.h  forwardplustechnique.cpp  forwardplustechnique.h  forwardtechnique.cpp  forwardtechnique.h  geometrypass.cpp  geometrypass.h  gltfmodelpass.cpp  gltfmodelpass.h  lightpass.cpp  lightpass.h  material.cpp  mesh.cpp  meshcube.cpp  meshcube.h  meshcubetex.cpp  meshcubetex.h  opaquepass.cpp  opaquepass.h  renderpass.cpp  renderpass.h  rendertarget.cpp  techniquedeferred.cpp  techniquedeferred.h  techniqueforward.cpp  techniqueforward.h  techniqueforwardplus.cpp  (+4 more)
playground/pgApp/src/engine/render/mesh/: mesh.cpp  meshcube.cpp  meshcube.h  meshcubetex.cpp  meshcubetex.h
playground/pgApp/src/engine/render/pass/: passclearrt.cpp  passclearrt.h  passcopybuffer.h  passcopytexture.cpp  passcopytexture.h  passdispatch.h  passgeometry.cpp  passgeometry.h  passgltfmodel.cpp  passgltfmodel.h  passlight.cpp  passlight.h  passopaque.cpp  passopaque.h  passrender.cpp  (+5 more)
playground/pgApp/src/engine/resources/: buffer.cpp  constantbuffer.cpp  indexbuffer.cpp  material.cpp  rendertarget.cpp  samplerstate.cpp  shader.cpp  shaderparameter.cpp  structuredbuffer.cpp  texture.cpp  vertexbuffer.cpp
playground/pgApp/src/engine/scene/: camera.cpp  scene.cpp  sceneass.cpp  sceneass.h
playground/pgApp/src/engine/technique/: technique.cpp  techniquedeferred.cpp  techniquedeferred.h  techniqueforward.cpp  techniqueforward.h  techniqueforwardplus.cpp  techniqueforwardplus.h  techniquegdr.cpp  techniquegdr.h  techniquetest.cpp  techniquetest.h
playground/pgApp/src/engine/utils/: ConstantBuffer.cpp  Shader.cpp  ShaderParameter.cpp  StructuredBuffer.cpp  light.h  material.cpp  mathutils.h  rendertarget.cpp  texture.cpp
playground/pgApp/src/test/: apptest.cpp  apptest.h
playground/pgApp/src/test/mesh/: meshcube.cpp  meshcube.h  meshcubetex.cpp  meshcubetex.h  meshprop.cpp  meshprop.h
playground/pgApp/src/test/pass/: passgdr.cpp  passgdr.h  passgltfmodel.cpp  passgltfmodel.h  passlight.cpp  passlight.h  passopaque.cpp  passopaque.h  passpostprocess.cpp  passpostprocess.h  passrender.cpp  passrender.h  passtest.cpp  passtest.h  passtransparent.cpp  passtransparent.h
playground/pgApp/src/test/pipeline/: pipelinecolorvertex.cpp  pipelinecolorvertex.h  pipelinedeferredgeometry.cpp  pipelinedeferredgeometry.h  pipelinefpopaque.cpp  pipelinefpopaque.h  pipelinegdr.cpp  pipelinegdr.h  pipelinelightback.cpp  pipelinelightback.h  pipelinelightdir.cpp  pipelinelightdir.h  pipelinelightfront.cpp  pipelinelightfront.h  pipelinetexvertex.cpp  pipelinetexvertex.h  pipelinetransparent.cpp  pipelinetransparent.h
playground/pgApp/src/test/scene/: scenegdr.cpp  scenegdr.h
playground/pgApp/src/test/technique/: techniquedeferred.cpp  techniquedeferred.h  techniqueforward.cpp  techniqueforward.h  techniqueforwardplus.cpp  techniqueforwardplus.h  techniquegdr.cpp  techniquegdr.h  techniquetest.cpp  techniquetest.h
(+19 files in other folders)
